--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+tr:nth-of-type(even) {
+  background-color: #fff;
+}
+
+tr:nth-of-type(odd) {
+  background-color: #ced4da;
+}
+
